--- a/package.json
+++ b/package.json
@@ -21,16 +21,18 @@
     "@angular/platform-browser": "~8.2.7",
     "@angular/platform-browser-dynamic": "~8.2.7",
     "@angular/router": "~8.2.7",
+    "@ng-bootstrap/schematics": "^2.0.0-alpha.1",
     "angular-bootstrap-md": "^8.3.1",
     "bootstrap": "^4.3.1",
     "moment": "^2.24.0",
     "ngx-bootstrap": "^5.1.2",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.9.1",
+    "@ng-bootstrap/ng-bootstrap": "^3.1.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.6",
+    "@angular-devkit/build-angular": "^0.803.8",
     "@angular/cli": "~8.3.5",
     "@angular/compiler-cli": "~8.2.7",
     "@angular/language-service": "~8.2.7",
