--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@angular/router": "~8.2.7",
     "angular-bootstrap-md": "^8.3.1",
     "bootstrap": "^4.3.1",
+    "hammerjs": "^2.0.8",
     "moment": "^2.24.0",
     "ngx-bootstrap": "^5.1.2",
+    "ngx-order-pipe": "^2.0.4",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
